# windsurf-project

./: Cargo.toml
.spec-kit/: 00_MANIFEST.md  01_ARCHITECTURE.md  02_DOMAIN_MODEL.md  03_ACTOR_SYSTEM.md  04_PERCEPTION.md
.specify/memory/: constitution.md
apps/core/: Cargo.toml
apps/core/src/: lib.rs
apps/core/src/actors/: account.rs  messages.rs  mod.rs  supervisor.rs
apps/core/src/domain/: workflow.rs
apps/core/src/infrastructure/: checkpointer.rs  console_bridge.rs
apps/core/src/perception/: bridge.rs  mod.rs  signal.rs
apps/core/src/persistence/: checkpointer.rs  mod.rs  schema.sql  store.rs
apps/core/tests/: actor_test.rs  durable_test.rs  persistence_test.rs  scale_test.rs
apps/desktop/src/assets/: perception.js
